--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,32 @@
+/* ---------------------------------------
+        CSS INDEX
+        - Home
+            - Navigation
+            - Carousal
+        - About
+        - Team
+        - Project
+        - Services
+        - Section-counter = Info
+        - Testimonials
+        - Blog
+        - Contact
+        - Footer
+----------------------------------------- */
+/*------------------ Start Html ------------*/
+html{
+    font-family: 'Cairo', sans-serif;
+    font-size: 1rem;
+    scroll-behavior: smooth;
+}
+/*------------------ Start Html ------------*/
+
+/*------------------ Start Home ------------*/
 .header {
     position: relative;
     width: 100%;
 }
-
+/*----------- start Navigation ------------*/
 .header-inner {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -55,11 +79,11 @@
     box-shadow: 0 1px 10px rgba(0, 0, 0, 0.4);
     transition-duration: 0.6s;
 }
-
-.navbar-scroll .nav-item .nav-link {
+.navbar-scroll .nav-item .nav-link,
+.navbar-scroll .navbar-nav .nav-icons a
+{
     color: #282828;
 }
-
 .navbar-scroll .nav-item .nav-link:hover,
 .navbar-scroll .navbar-nav .nav-icons a:hover {
     color: #f25454;
@@ -75,8 +99,8 @@
     margin-left: 10px;
     color: #282828;
 }
-
-
+/*------------------ End Navigation ------------*/
+/*------------------ Start Carousal ------------*/
 .carousel .carousel-inner img {
     width: 100vw;
     height: 100vh;
@@ -120,13 +144,23 @@
 }
 
 .controls-top .fa {
-    color: rgb(0, 26, 35);
+    color: #ffffff;
 }
-
+.controls-top .fa:hover
+{
+    color: #f25454;
+}
 .btn-floating {
-    border: 1px solid rgb(0, 26, 35);
+    border: 1px solid rgb(133 151 157);
     z-index: 2;
-    padding: 0 15px 0 15px;
+    padding: 0 20px 0 20px;
+    color: white;
+}
+.btn-floating:hover
+{
+    background: #FFF;
+    border: 1px solid rgba(255, 255, 255, 0.7) !important;
+    transition: all .5s ease ;
 }
 
 .settings_close {
@@ -203,8 +237,8 @@
         opacity: 0;
     }
 }
-
-
+/*------------------ End Carousal ------------*/
+/*------------------ Start About ------------*/
 .about .left-about p {
     font-size: .8rem;
 }
@@ -241,8 +275,9 @@
 .progress .progress-bar {
     background-color: #f25454;
 }
+/*------------------ End About ------------*/
 
-
+/*------------------ Start Team ------------*/
 .team-member {
     position: relative;
     background-color: #fff;
@@ -348,8 +383,8 @@
 .team-member .team-details .position {
     color: #666;
 }
-
-
+/*------------------ End Team ------------*/
+/*------------------ Start Info ------------*/
 .info-box h3 {
     line-height: 50px;
     font-weight: 400;
@@ -384,40 +419,14 @@
 .info-box .pull-right {
     float: right !important;
 }
-
+/*------------------ End Info ------------*/
+/*------------------ Start Service ------------*/
 .service-single {
     position: relative;
 }
 
 .service-single .icon {
     color: #f25454;
-}
-
-.service-single > .icon {
-    position: relative;
-    display: block;
-    float: left;
-    font-size: 32px;
-    line-height: 32px;
-    font-weight: normal;
-    margin-right: 20px;
-    text-align: center;
-    cursor: default;
-}
-
-.service-single > .service-text {
-    position: relative;
-    display: block;
-    float: left;
-    width: calc(100% - 52px);
-}
-
-.service-single h3 {
-    font-size: 18px;
-    margin-top: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
 }
 
 .service-single p {
@@ -432,45 +441,13 @@
 .service-single i {
     color: #f25454;
 }
-
-.testimonials .carousel {
-    position: relative;
-}
-
-.testimonials ol.carousel-indicators {
-    position: absolute;
-    width: 100%;
-    margin: 10px;
-    top: 0;
-    left: 50%;
-    transform: translateX(35%);
-}
-
-.testimonials ol.carousel-indicators li {
-    margin-left: 70px;
-}
-
-.testimonials ol.carousel-indicators li img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-}
-
-.testimonials .carousel-inner .carousel-item {
-    margin-top: 100px;
-}
-
-.testimonials .carousel-inner .carousel-item p {
-    font-size: 2.5rem;
-}
-
+/*------------------ End Service ------------*/
 
 .empty-30 {
     clear: both;
     height: 30px;
 }
-
-/*--------------------------*/
+/*------------------ Start Group  ------------*/
 .about,
 .team,
 .services{
@@ -494,7 +471,6 @@
     text-transform: none;
     color: rgba(0, 0, 0, 0.1);
 }
-
 .about .about-title,
 .team .team-title,
 .services .services-title{
@@ -537,12 +513,46 @@
 {
     font-size: 2.5rem;
 }
+.services,
+.contact
+{
+    background-color: #fafafa !important;
+}
 
+/*------------------ End Group ------------*/
 
+/*------------------ Start Testimonial ------------*/
+.testimonial-carousel .carousel-images {margin: auto}
+.testimonials .carousel {
+    position: relative;
+}
 
+.testimonials ol.carousel-indicators {
+    position: absolute;
+    width: 100%;
+    margin: 10px;
+    top: 0;
+    left: 50%;
+    transform: translateX(35%);
+}
 
+.testimonials ol.carousel-indicators li {
+    margin-left: 70px;
+}
 
+.testimonials ol.carousel-indicators li img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
 
+.testimonials .carousel-inner .carousel-item {
+    margin-top: 100px;
+}
+
+.testimonials .carousel-inner .carousel-item p {
+    font-size: 2.5rem;
+}
 
 .img-responsive {
     display: block;
@@ -555,69 +565,6 @@
 }
 
 
-
-
-
-
-
-
-@media (min-width: 768px) {
-    .container {
-        width: 750px;
-    }
-}
-
-@media (min-width: 992px) {
-    .container {
-        width: 970px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        width: 1170px;
-    }
-}
-
-
-
-
-@media (min-width: 768px) {
-    .col-sm-12, .col-sm-8 {
-        float: left;
-    }
-
-    .col-sm-12 {
-        width: 100%;
-    }
-
-    .col-sm-8 {
-        width: 66.66666667%;
-    }
-
-    .col-sm-offset-2 {
-        margin-left: 16.66666667%;
-    }
-}
-
-@media (min-width: 992px) {
-    .col-md-12, .col-md-8 {
-        float: left;
-    }
-
-    .col-md-12 {
-        width: 100%;
-    }
-
-    .col-md-8 {
-        width: 66.66666667%;
-    }
-
-    .col-md-offset-2 {
-        margin-left: 16.66666667%;
-    }
-}
-
 .container:after, .container:before, .row:after, .row:before {
     display: table;
     content: " ";
@@ -626,15 +573,6 @@
 .container:after, .row:after {
     clear: both;
 }
-
-
-
-section {
-    position: relative;
-    background: #fff;
-}
-
-
 .section-title h2 {
     position: relative;
     clear: both;
@@ -713,7 +651,8 @@ section {
     line-height: 1;
 }
 
-.testimonial-carousel .carousel-images .slick-slide:active, .testimonial-carousel .carousel-images .slick-slide:focus {
+.testimonial-carousel .carousel-images .slick-slide:active,
+.testimonial-carousel .carousel-images .slick-slide:focus {
     outline: none;
 }
 
@@ -738,35 +677,9 @@ section {
     line-height: 1.5em;
 }
 
-@media (max-width: 767px) {
-    h2 {
-        font-size: 30px;
-        line-height: 30px;
-    }
-
-    h3 {
-        font-size: 24px;
-        line-height: 24px;
-    }
-
-    .testimonial-carousel .carousel-text .single-box {
-        width: 100%;
-    }
-}
-
-.slick-slider {
+.slick-slider
+{
     position: relative;
-    display: block;
-    box-sizing: border-box;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-    touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
 }
 
 .slick-list {
@@ -782,10 +695,6 @@ section {
 }
 
 .slick-slider .slick-track, .slick-slider .slick-list {
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
 }
 
@@ -819,4 +728,179 @@ section {
 .slick-initialized .slick-slide {
     display: block;
 }
+/*------------------ End Testimonial ------------*/
 
+/*------------------ Start Contact ------------*/
+
+section .container {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.contact-info h3 {
+    margin: 0 0 15px 0;
+}
+.contact-content {
+    clear: both;
+    padding: 10px 0;
+    border-bottom: 1px solid #eee;
+}
+.contact-content > .fas
+{
+    color: #f25454;
+    float: left;
+}
+.contact-content>.contact-text {
+    position: relative;
+    display: block;
+    float: left;
+    width: calc(100% - 60px);
+    margin-left: 20px;
+}
+a {
+    color: #444;
+    text-decoration: none;
+    -webkit-transition: .3s;
+    -moz-transition: .3s;
+    transition: .3s;
+}
+
+.contact-form .field {
+    width: 98%;
+    margin-bottom: 20px;
+    position: relative;
+}
+.contact-form .field input, .contact-form .field textarea {
+    width: 100%;
+    padding: 11px;
+}
+.btn.btn-default
+{
+    background-color: #f25454;
+}
+.btn.btn-default {
+    color: #fff;
+    padding: 10px 20px;
+}
+.contact-form-result {
+    display: none;
+}
+.contact-form-result h3 {
+    margin: 0 0 20px 0 !important;
+}
+.contact-form h5 {
+    margin-top: 0;
+}
+/*------------------ End Contact ------------*/
+/*------------------ End Footer ------------*/
+footer .to-top {
+    background: rgba(242, 84, 84, 0.5);
+    position: absolute;
+    display: block;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    top: -25px;
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 46px;
+    text-align: center;
+    cursor: pointer !important;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+footer .to-top i {
+    color: #fff;
+}
+
+footer .footer-widgets {
+    position: relative;
+    clear: both;
+    background: #222222;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-image: url(../images/dotted-map.png);
+    background-size: contain;
+}
+footer .footer-widgets a {
+    color: #b0b0b0;
+}
+footer {
+    position: relative;
+    clear: both;
+    z-index: 10;
+    font-family: "Poppins", sans-serif;
+    color: #b0b0b0;
+}
+footer .footer-widgets h5 {
+    color: #fff;
+    margin-bottom: 20px;
+}
+footer .footer-widgets h5 {
+    color: #fff;
+    margin-bottom: 20px;
+}
+footer .footer-widgets .footer-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+footer .footer-widgets .tags {
+    margin-top: 16px;
+}
+footer .footer-widgets .tags .tag {
+    border: 1px solid #b0b0b0;
+}
+.tags .tag {
+    display: block;
+    float: left;
+    margin-right: 8px;
+    margin-bottom: 8px;
+    padding: 2px 10px;
+    font-size: 13px;
+    text-decoration: none;
+    border-radius: 3px;
+    border: 1px solid #eee;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+footer .footer-copyright {
+    position: relative;
+    clear: both;
+    background: #1a1a1a;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.footer-social {
+    cursor: default;
+    line-height: 1;
+}
+.footer-social a{color: #fff; margin-left: 10px}
+.footer-social a:hover,
+footer .copyright a:hover
+{
+    color: #f25454;
+}
+footer .copyright {
+    clear: both;
+    margin: 0;
+    line-height: 16px;
+    letter-spacing: 1px;
+    text-align: right;
+}
+footer .copyright a {
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    text-decoration: none;
+}
+/*------------------ End Footer ------------*/
